Revert "fix(ui): visibility menu positioning after toggling Inbox"
This reverts commit 91e0984617fcf85c4f75032805844479b8f13fdd.

--- a/src/app/core-ui/magic-side-nav/nav-list/nav-list-tree.component.scss
+++ b/src/app/core-ui/magic-side-nav/nav-list/nav-list-tree.component.scss
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  overflow: hidden;
 
   // Hide additional buttons by default on desktop
   .additional-btns {
